z-index fix dev app

--- a/src/components/Dev/Dev.scss
+++ b/src/components/Dev/Dev.scss
@@ -8,6 +8,9 @@
     background-size: cover;
     background-position: center;
   }
+  .mobilenav {
+    z-index: 10000000;
+  }
 
   .heading {
     color: white;
